Implementation of the various files required to list items of the goods and tags

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,10 +29,10 @@ Created on Sat Oct 21 15:32:00 2023
        <nav>
        <ul>
          <li>
-           <a href="">
+           <a href="{% url 'goods_item_list' %}">
              Goods List</a></li>
          <li>
-           <a href="">
+           <a href="{% url 'goods_tag_list' %}">
              Tags List</a></li>
        </ul>
      </nav>
