issues with the pages items and tags resolved

--- a/goods/templates/goods/item_list.html
+++ b/goods/templates/goods/item_list.html
@@ -4,7 +4,7 @@ Created on Sun Oct 22 14:15:00 2023
 
 @author: Imanethepe
 """
-{% extends parent_template|default:"organizer/base_goods.html" %} 
+{% extends parent_template|default:"goods/base_goods.html" %} 
 
 {% block title %}
 {{ block.super }} - Items
