--- a/goods/templates/goods/item_list.html
+++ b/goods/templates/goods/item_list.html
@@ -14,14 +14,14 @@ Created on Sun Oct 22 14:15:00 2023
  
  <h2>Items List</h2>
   <div>
-    <a href="">
+    <a href="{% url 'goods_item_create' %}">
       Create New Item</a>
   </div>
 
  <ul>
    {% for item in item_list %}
     <li>
-      <a href="">
+      <a href="{{item.get_absolute_url}}">
         {{ item.name }}</a>
       <ul>
         <li>
