--- a/goods/templates/goods/tag_list.html
+++ b/goods/templates/goods/tag_list.html
@@ -15,19 +15,19 @@ Created on Sun Oct 22 14:15:00 2023
  
   <h2>Tags List</h2>
     <div>
-      <a href="">
+      <a href="{% url 'goods_tag_create' %}">
         Create New Tag</a>
     </div>
   <ul> 
     {% for tag in tag_list %} 
       <li> 
-        <a href=""> 
+        <a href="{{tag.get_absolute_url}}"> 
           {{ tag.name|title }}</a>
       </li>
       <ul>
         <li>
            <a href="">
-             Edit Tag</a></li>
+             Update Tag</a></li>
         <li>
            <a href="">
              Delete Tag</a></li>
