--- a/goods/templates/goods/tag_list.html
+++ b/goods/templates/goods/tag_list.html
@@ -26,10 +26,10 @@ Created on Sun Oct 22 14:15:00 2023
       </li>
       <ul>
         <li>
-           <a href="">
+           <a href="{{tag.get_update_url}}">
              Update Tag</a></li>
         <li>
-           <a href="">
+           <a href="{{tag.get_delete_url}}">
              Delete Tag</a></li>
       </ul>
      {% empty %}
