--- a/goods/templates/goods/item_detail.html
+++ b/goods/templates/goods/item_detail.html
@@ -11,9 +11,14 @@ Created on Tue Oct 24 14:00:19 2023
 {% endblock %}
 
 {% block content %}
-<article>
+  <section>
 
-  <h2>{{ item.name|title }}-{{item.quantity}}</h2>
+  <h2>{{ item.name|title }}-Quantity: {{item.quantity}}</h2>
+  
+  <h3>Description</h3> 
+  
+  {{ item.description|linebreaks }}
+  
   <dl>      
     <dt>Tag{{ item.tags.count|pluralize }}</dt>
       {% for tag in item.tags.all %}
@@ -24,16 +29,13 @@ Created on Tue Oct 24 14:00:19 2023
   
   </dl>
   
-  {{ item.description|linebreaks }}
-  
   <ul>
      <li>
-       <a href="">
+       <a href="{{item.get_update_url}}">
          Update Item</a></li>
      <li>
-       <a href="">
+       <a href="{{item.get_delete_url}}">
          Delete Item</a></li>
   </ul>
- 
- </article>
+  </section>
 {% endblock %}
