--- a/goods/templates/goods/item_list.html
+++ b/goods/templates/goods/item_list.html
@@ -22,13 +22,13 @@ Created on Sun Oct 22 14:15:00 2023
    {% for item in item_list %}
     <li>
       <a href="{{item.get_absolute_url}}">
-        {{ item.name }}-{{item.quantity}}</a>
+        {{ item.name }}-Quantity: {{item.quantity}}</a>
       <ul>
         <li>
-           <a href="">
+           <a href="{{item.get_update_url}}">
              Update Item</a></li>
         <li>
-           <a href="">
+           <a href="{{item.get_delete_url}}">
              Delete Item</a></li>
       </ul>  
     </li>
