--- a/goods/templates/goods/tag_list.html
+++ b/goods/templates/goods/tag_list.html
@@ -24,14 +24,14 @@ Created on Sun Oct 22 14:15:00 2023
         <a href="{{tag.get_absolute_url}}"> 
           {{ tag.name|title }}</a>
       </li>
-      <ul>
-        <li>
-           <a href="{{tag.get_update_url}}">
-             Update Tag</a></li>
-        <li>
-           <a href="{{tag.get_delete_url}}">
-             Delete Tag</a></li>
-      </ul>
+<!-- <ul> -->
+<!--        <li>-->
+<!--          <a href="{{tag.get_update_url}}">-->
+<!--             Update Tag</a></li>-->
+<!--        <li>-->
+<!--           <a href="{{tag.get_delete_url}}">-->
+<!--             Delete Tag</a></li>-->
+<!--      </ul>-->
      {% empty %}
        <li><em>There are currently no Tags available.</em></li>
      {% endfor %}
