--- a/goods/templates/goods/item_list.html
+++ b/goods/templates/goods/item_list.html
@@ -35,5 +35,6 @@ Created on Sun Oct 22 14:15:00 2023
    {% empty %}
      <li><em>No Items in  list</em></li>
    {% endfor %}
+ <h4>Total Inventory Value: {{value.total_inventory_value}}</h4>
  </ul>
 {% endblock %}
