--- a/goods/templates/goods/item_detail.html
+++ b/goods/templates/goods/item_detail.html
@@ -13,15 +13,15 @@ Created on Tue Oct 24 14:00:19 2023
 {% block content %}
   <section>
 
-  <h2>{{ item.name|title }}</h2>
+  <h3>{{ item.name|title }}</h3>
   
-  <h3>Description</h3> 
+  <h4>Description</h4> 
   
   {{ item.description|linebreaks }}
   
-  <h3>Quantity: {{item.quantity}}</h3>
+  <h4>Quantity: {{item.quantity}}</h4>
   
-  <h3>Estimated Price: {{item.estimated_price}}</h3>
+  <h4>Estimated Price in {{item.currency}}: {{item.estimated_price}}</h4>
   
   <ul>
      <li>
